<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="@dimen/default_vertical_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/item_product_image"
        android:layout_width="@dimen/product_preview_size"
        android:layout_height="@dimen/product_preview_size"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        android:background="@android:color/transparent"
        android:src="@drawable/pizza_1"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/item_product_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_horizontal_margin"
        android:text="@string/pizza_name_example_1"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/item_product_image"/>

    <TextView
        android:id="@+id/item_product_describtion"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/pizza_describtion_example_1"
        android:textColor="@color/gray"
        android:textSize="@dimen/hint_text_size"
        app:layout_constraintTop_toBottomOf="@id/item_product_name"
        app:layout_constraintStart_toStartOf="@id/item_product_name"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/item_product_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_horizontal_margin"
        android:paddingHorizontal="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/price"
        android:textSize="15sp"
        android:textColor="@color/rose"
        app:strokeColor="@color/rose"
        app:strokeWidth="1dp"
        app:cornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@id/item_product_describtion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>